k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mock-telldus-deployment 
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mock-telldus 
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: mock-telldus 
    spec:
      containers:
      - name: mock-telluds-pod
        image: 136497237762.dkr.ecr.eu-north-1.amazonaws.com/mock-telldus:latest
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: regcred
