k8s/service-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
    name: mock-telldus-cip-service
spec:
    type: ClusterIP
    ports:
    - port: 8080
      targetPort: 8080
    selector:
      app: mock-telldus
